Fix gitignore? + schedule as scroll instead of overflow

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -22,6 +22,10 @@ body {
    basic info 
 */
 
+div.scrollBox {
+    overflow: scroll;
+}
+
 .class-item {
     margin-top: 5em;
     border-color: white;
